--- a/_Moondust Config Pack/items/npc/npc-205.ini
+++ b/_Moondust Config Pack/items/npc/npc-205.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Zoomer"
-group = "Miscellaneous"
-category = "Enemy"
-description = "A spiky enemy that crawls along walls and ceilings. Takes <u>three fireballs</u> to kill."
+name = "Unused NPC"
+group = "Unused"
+category = "Unused"
+description = "Unused NPC Slot."
 image = "npc-205.png"
 algorithm = ""
 default-effect = 108
