--- a/_Moondust Config Pack/items/npc/npc-214.ini
+++ b/_Moondust Config Pack/items/npc/npc-214.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Vines (Red)"
-group = "Super Mario Bros. 3"
-category = "Climbable"
-description = "A climbable tile."
+name = "Unused NPC"
+group = "Unused"
+category = "Unused"
+description = "Unused NPC Slot."
 image = "npc-214.png"
 algorithm = ""
 default-effect = 10
