--- a/_Moondust Config Pack/items/npc/npc-221.ini
+++ b/_Moondust Config Pack/items/npc/npc-221.ini
@@ -1,8 +1,8 @@
 [npc]
 name = "Ladder"
-group = "Super Mario Bros. 2"
+group = "Items"
 category = "Climbable"
-description = "A climbable tile."
+description = "A climbable tile that can be in various styles."
 image = "npc-221.png"
 algorithm = ""
 default-effect = 10
