--- a/_Moondust Config Pack/items/npc/npc-222.ini
+++ b/_Moondust Config Pack/items/npc/npc-222.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Vines Green"
-group = "Super Mario Bros."
+name = "Vine (Bottom)"
+group = "Items"
 category = "Climbable"
-description = "A climbable tile."
+description = "A climbable tile that can be in various styles."
 image = "npc-222.png"
 algorithm = ""
 default-effect = 10
