--- a/_Moondust Config Pack/items/npc/npc-225.ini
+++ b/_Moondust Config Pack/items/npc/npc-225.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Red Vine Head"
-group = "Super Mario Bros. 3"
-description = "Moves upwards and spawns <b>Red Vines</b> on its path."
-category = "Climbable"
+name = "Unused NPC"
+group = "Unused"
+category = "Unused"
+description = "Unused NPC Slot."
 image = "npc-225.png"
 algorithm = "vinehead.lua"
 default-effect = 10
