--- a/_Moondust Config Pack/items/npc/npc-227.ini
+++ b/_Moondust Config Pack/items/npc/npc-227.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Green Vine Head"
-group = "Super Mario World"
-description = "Moves upwards and spawns <b>Green Vines</b> on its path."
+name = "Vine (Head)"
+group = "Items"
 category = "Climbable"
+description = "Moves upwards and spawns <b>Vine</b> on its path."
 image = "npc-227.png"
 algorithm = "vinehead.lua"
 default-effect = 10
