--- a/_Moondust Config Pack/items/npc/npc-116.ini
+++ b/_Moondust Config Pack/items/npc/npc-116.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Reserved"
-group = "Reserved"
-category = "Reserved"
-description = "Reserved NPC Slot."
+name = "Unused NPC"
+group = "Unused"
+category = "Unused"
+description = "Unused NPC Slot."
 image = "npc-116.png"
 algorithm = "shell.lua"
 default-effect = 60
