--- a/_Moondust Config Pack/items/npc/npc-209.ini
+++ b/_Moondust Config Pack/items/npc/npc-209.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Mother Brain"
-group = "Miscellaneous"
-category = "Boss"
-description = "A boss enemy that doesn't do anything by itself. Can be moved around when put on a layer. Takes <u>ten strong items</b> to kill."
+name = "Unused NPC"
+group = "Unused"
+category = "Unused"
+description = "Unused NPC Slot."
 image = "npc-209.png"
 algorithm = ""
 default-effect = 112
