--- a/_Moondust Config Pack/items/npc/npc-217.ini
+++ b/_Moondust Config Pack/items/npc/npc-217.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Vines (Blue)"
-group = "Super Mario Bros. 2"
-description = "A climbable tile."
+name = "Big Vine (Top)"
+group = "Items"
 category = "Climbable"
+description = "A climbable tile that can be in various styles."
 image = "npc-217.png"
 algorithm = ""
 default-effect = 10
