--- a/_Moondust Config Pack/items/npc/npc-218.ini
+++ b/_Moondust Config Pack/items/npc/npc-218.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Vines Bottom (Green)"
-group = "Super Mario Bros. 2"
-description = "A climbable tile."
-category = "Climbable"
+name = "Unused NPC"
+group = "Unused"
+category = "Unused"
+description = "Unused NPC Slot."
 image = "npc-218.png"
 algorithm = ""
 default-effect = 10
