--- a/_Moondust Config Pack/items/npc/npc-219.ini
+++ b/_Moondust Config Pack/items/npc/npc-219.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Vines Bottom (Yellow)"
-group = "Super Mario Bros. 2"
-category = "Climbable"
-description = "A climbable tile."
+name = "Unused NPC"
+group = "Unused"
+category = "Unused"
+description = "Unused NPC Slot."
 image = "npc-219.png"
 algorithm = ""
 default-effect = 10
