--- a/_Moondust Config Pack/items/npc/npc-223.ini
+++ b/_Moondust Config Pack/items/npc/npc-223.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Vines Green Top"
-group = "Super Mario Bros."
-description = "A climbable tile."
+name = "Vine (Top)"
+group = "Items"
 category = "Climbable"
+description = "A climbable tile that can be in various styles."
 image = "npc-223.png"
 algorithm = ""
 default-effect = 10
