--- a/_Moondust Config Pack/items/npc/npc-224.ini
+++ b/_Moondust Config Pack/items/npc/npc-224.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Vines Green"
-group = "Super Mario World"
-description = "A climbable tile."
+name = "Vine"
+group = "Items"
 category = "Climbable"
+description = "A climbable tile that can be in various styles."
 image = "npc-224.png"
 algorithm = ""
 default-effect = 10
