--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -44,43 +44,47 @@ game-credit-16="H2643"
 game-credit-17="KingGeoshiKoopshi64"
 game-credit-18="Linkstorm Z"
 game-credit-19="TLtimelord"
-game-credit-20="P-Tux7"
-game-credit-21="Crafink"
-game-credit-22="Mudkip"
-game-credit-23="Xilore 25"
-game-credit-24="SuperAlex"
-game-credit-25="BullyWithAHat"
-game-credit-26="Mike"
-game-credit-27="Lean"
-game-credit-28="MarioFan230"
-game-credit-29="TheCrushedJoycon"
-game-credit-30="Gatete"
-game-credit-31="Astrakitu"
-game-credit-32="SamS1m0n"
-game-credit-33="MatiasNTRM"
-game-credit-34="gbradley231"
-game-credit-35="Askywalker"
-game-credit-36=""
-game-credit-37="Music:"
-game-credit-38=""
-game-credit-39="Mod Archive"
-game-credit-40="SMW Central"
-game-credit-41="Newgrounds Audio Portal"
-game-credit-42="OverClocked Remix"
-game-credit-43="VGMusic"
-game-credit-44=""
-game-credit-45="Sounds:"
-game-credit-46=""
-game-credit-47="Yingchun Soul"
-game-credit-48="Yave Yu"
-game-credit-49="Hello"
-game-credit-50="VGMusic"
-game-credit-51=""
-game-credit-52="Special Thanks:"
-game-credit-53=""
-game-credit-54="Skullgamer205"
-game-credit-55="Wohlstand"
-game-credit-56=""
-game-credit-57="\"Finally, Mushroom Kingdom was"
-game-credit-58="returned to peace by everyone's"
-game-credit-59="effort and battlings......\""
+game-credit-20="NSPBWii"
+game-credit-21="P-Tux7"
+game-credit-22="Crafink"
+game-credit-23="Mudkip"
+game-credit-24="Xilore 25"
+game-credit-25="SuperAlex"
+game-credit-26="BullyWithAHat"
+game-credit-27="Mike"
+game-credit-28="Lean"
+game-credit-29="MarioFan230"
+game-credit-30="TheCrushedJoycon"
+game-credit-31="Gatete"
+game-credit-32="Astrakitu"
+game-credit-33="SamS1m0n"
+game-credit-34="MatiasNTRM"
+game-credit-35="gbradley231"
+game-credit-36="Askywalker"
+game-credit-37=""
+game-credit-38="Music:"
+game-credit-39=""
+game-credit-40="Mod Archive"
+game-credit-41="SMW Central"
+game-credit-42="Newgrounds Audio Portal"
+game-credit-43="OverClocked Remix"
+game-credit-44="VGMusic"
+game-credit-45=""
+game-credit-46="Sounds:"
+game-credit-47=""
+game-credit-48="Yingchun Soul"
+game-credit-49="Yave Yu"
+game-credit-50="Hello"
+game-credit-51="VGMusic"
+game-credit-52=""
+game-credit-53="Special Thanks:"
+game-credit-54=""
+game-credit-55="Skullgamer205"
+game-credit-56="Wohlstand"
+game-credit-57=""
+game-credit-58="\"Finally, Mushroom Kingdom was"
+game-credit-59="returned to peace by everyone's"
+game-credit-60="effort and battlings......\""
+game-credit-61="“就这样，在大家的共同努力和战斗之下，"
+game-credit-62="我们的蘑菇王国"
+game-credit-63="终于恢复了往常的宁静……”"
