--- a/_Moondust Config Pack/items/npc/npc-242.ini
+++ b/_Moondust Config Pack/items/npc/npc-242.ini
@@ -1,7 +1,7 @@
 [npc]
 name = "Goomba"
-group = "Miscellaneous"
-category = "Enemy"
+group = "Enemies"
+category = "Castle"
 description = "An enemy that walks forwards and can be stomped on."
 image = "npc-242.png"
 algorithm = ""
