--- a/sounds.ini
+++ b/sounds.ini
@@ -1,5 +1,5 @@
 [sound-main]
-total=103
+total=104
 use-iceball-sfx = true
 use-new-ice-sfx = true
 player-use-npc-hammer-sfx = true
@@ -490,8 +490,8 @@ name="Frozen NPC got broken"
 file="yi_icebreak.ogg"
 
 [sound-97]
-name="Player hammer toss [RESERVED]"
-silent=true
+name="Player hammer toss"
+file="player-hammer.ogg"
 
 [sound-98]
 name="Sprout vine"
@@ -516,3 +516,7 @@ file="zelda-ice.ogg"
 [sound-103]
 name="Zelda fireball shoot"
 file="zelda-fire-rod.ogg"
+
+[sound-104]
+name="Flame Thrower"
+file="flame-thrower.ogg"
