--- a/_Moondust Config Pack/items/bgo/background-196.ini
+++ b/_Moondust Config Pack/items/bgo/background-196.ini
@@ -3,6 +3,7 @@ image = "background-196.png"
 name = "Tree"
 group = "Outdoors"
 category = "Scenery"
+description = "An ordinary tree."
 view = "background"
 animated = 0
 frames = 1
