--- a/_Moondust Config Pack/items/bgo/background-72.ini
+++ b/_Moondust Config Pack/items/bgo/background-72.ini
@@ -3,7 +3,7 @@ image = "background-72.png"
 name = "Vertical Track"
 group = "Track"
 category = "Track Path"
-description = "A vertical track tile, which makes track-based NPC's move horizontally."
+description = "A vertical track tile, which makes track-based NPC's move vertically."
 grid = 16
 z-layer = "background"
 z-offset = 0.04
