--- a/_Moondust Config Pack/items/npc/npc-219.ini
+++ b/_Moondust Config Pack/items/npc/npc-219.ini
@@ -1,8 +1,8 @@
 [npc]
-name = "Unused NPC"
-group = "Unused"
-category = "Unused"
-description = "Unused NPC Slot."
+name = "Climbable Rock"
+group = "Items"
+category = "Climbable"
+description = "A climbable tile that can be in various styles."
 image = "npc-219.png"
 algorithm = ""
 default-effect = 10
