--- a/gameinfo.ini
+++ b/gameinfo.ini
@@ -62,31 +62,32 @@ game-credit-34="MatiasNTRM"
 game-credit-35="gbradley231"
 game-credit-36="Askywalker"
 game-credit-37="CursedMario"
-game-credit-38="GlacialSiren484"
-game-credit-39=""
-game-credit-40="Music:"
-game-credit-41=""
-game-credit-42="Mod Archive"
-game-credit-43="SMW Central"
-game-credit-44="Newgrounds Audio Portal"
-game-credit-45="OverClocked Remix"
-game-credit-46="VGMusic"
-game-credit-47=""
-game-credit-48="Sounds:"
-game-credit-49=""
-game-credit-50="Yingchun Soul"
-game-credit-51="Yave Yu"
-game-credit-52="Hello"
-game-credit-53="VGMusic"
-game-credit-54=""
-game-credit-55="Special Thanks:"
-game-credit-56=""
-game-credit-57="Skullgamer205"
-game-credit-58="Wohlstand"
-game-credit-59=""
-game-credit-60="\"Finally, Mushroom Kingdom was"
-game-credit-61="returned to peace by everyone's"
-game-credit-62="effort and battlings......\""
-game-credit-63="“就这样，在大家的共同努力和战斗之下，"
-game-credit-64="我们的蘑菇王国"
-game-credit-65="终于恢复了往常的宁静……”"
+game-credit-38="AnasWael"
+game-credit-39="MegaDood"
+game-credit-40=""
+game-credit-41="Music:"
+game-credit-42=""
+game-credit-43="Mod Archive"
+game-credit-44="SMW Central"
+game-credit-45="Newgrounds Audio Portal"
+game-credit-46="OverClocked Remix"
+game-credit-47="VGMusic"
+game-credit-48=""
+game-credit-49="Sounds:"
+game-credit-50=""
+game-credit-51="Yingchun Soul"
+game-credit-52="Yave Yu"
+game-credit-53="Hello"
+game-credit-54="VGMusic"
+game-credit-55=""
+game-credit-56="Special Thanks:"
+game-credit-57=""
+game-credit-58="Skullgamer205"
+game-credit-59="Wohlstand"
+game-credit-60=""
+game-credit-61="\"Finally, Mushroom Kingdom was"
+game-credit-62="returned to peace by everyone's"
+game-credit-63="effort and battlings......\""
+game-credit-64="“就这样，在大家的共同努力和战斗之下，"
+game-credit-65="我们的蘑菇王国"
+game-credit-66="终于恢复了往常的宁静……”"
