更新月尘配置包的部分

--- a/_Moondust Config Pack/items/npc/npc-231.ini
+++ b/_Moondust Config Pack/items/npc/npc-231.ini
@@ -1,21 +1,21 @@
 [npc]
-name = "Blooper"
-group = "Super Mario Bros. 3"
-category = "Enemy"
-description = "A swimming enemy that irregularly moves diagonally upwards, attempting to chase the player."
+name = "Big Blooper"
+group = "Enemies"
+category = "Aquatic"
+description = "An aquatic enemy that irregularly moves diagonally upwards and attempting to chase the player."
 image = "npc-231.png"
 algorithm = ""
 default-effect = 117
 shell-effect = 117
 gfx-offset-x = 0
-gfx-offset-y = 0
-gfx-height = 32
-gfx-width = 32
+gfx-offset-y = 32
+gfx-height = 96
+gfx-width = 64
 grid = 32
-grid-offset-x = 0
+grid-offset-x = 4
 grid-offset-y = 0
-physical-height = 32
-physical-width = 32
+physical-height = 64
+physical-width = 56
 frame-style = 1
 frames = 2
 frame-delay = 128
