--- a/_Moondust Config Pack/items/npc/npc-235.ini
+++ b/_Moondust Config Pack/items/npc/npc-235.ini
@@ -2,7 +2,7 @@
 name = "Blooper"
 group = "Enemies"
 category = "Aquatic"
-description = "A swimming enemy that irregularly moves diagonally upwards, attempting to chase the player."
+description = "An aquatic enemy that irregularly moves diagonally upwards and attempting to chase the player."
 image = "npc-235.png"
 algorithm = ""
 default-effect = 121
